# OpenDevOps

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.railway  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml  iam-policy.json  pyproject.toml  railway.toml
apps/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/backend/migrations/: 004_users_rbac.sql  010_session_user_interacted.sql  012_incident_claims.sql
apps/backend/scripts/: gen_tool_inventory.py  setup_db.py
apps/backend/src/: mcp_server.py
apps/backend/src/agent/: incident_keys.py  init_store.py  monitor_store.py  prompts.py  turns.py
apps/backend/src/agent/db/: __init__.py  base.py
apps/backend/src/agent/llm/: identity.py
apps/backend/src/agent/llm/detectors/: __init__.py
apps/backend/src/api/: app.py  auth.py  streaming_labels.py
apps/backend/src/api/routers/: auth.py  chat.py  dashboard.py  evidence.py  history.py  init.py  integrations.py  inventory.py  monitoring.py  sessions.py  settings.py  users.py
apps/backend/src/cli/: ask.py  dev.py  investigate.py  main.py  mcp.py  migrate.py  report.py
apps/backend/src/config/: __init__.py  appsettings.py
apps/backend/src/integrations/: slack_webhook.py
apps/backend/src/models/: __init__.py  memory.py
apps/backend/src/providers/: __init__.py  base.py
apps/backend/src/providers/aws/: __init__.py  context.py  event_consumer.py
apps/backend/src/providers/aws/tools/: iam.py
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_dlq_logic.py  test_poller.py  test_slack.py  test_telegram.py
apps/backend/tests/test_agent/: test_core.py  test_cost.py  test_incident_keys.py
apps/backend/tests/test_api/: test_cancel.py  test_evidence.py  test_inventory.py
apps/backend/tests/test_backends/: test_backends.py
apps/backend/tests/test_eval/: test_salvage.py  test_scoring.py
apps/backend/tests/test_llm/: test_backend.py  test_claude_code_detector.py  test_identity.py  test_picker.py
apps/backend/tests/test_tools/: test_bash_tool.py  test_cap.py  test_cloudwatch.py  test_credentials.py  test_ecs.py  test_evidence_pack.py  test_lambda.py  test_permissions.py  test_rds.py
apps/core/: pyproject.toml
apps/core/src/opendevops_core/: __init__.py  config.py
apps/core/src/opendevops_core/agent/: core.py  evidence.py  incident_keys.py  init_store.py  inventory.py  investigation_runner.py  monitor_store.py  prompts.py  summarizer.py  turns.py
apps/core/src/opendevops_core/agent/db/: __init__.py  base.py  memory.py  postgres.py  sqlite.py
apps/core/src/opendevops_core/agent/llm/: __init__.py  backend.py  preference.py
apps/core/src/opendevops_core/agent/llm/detectors/: __init__.py  base.py  claude_code.py
apps/core/src/opendevops_core/integrations/: slack_webhook.py  telegram.py
apps/core/src/opendevops_core/migrations/: 005_alerts.sql  013_alerts_evidence.sql  014_cloud_accounts.sql  015_findings_hypotheses.sql  __init__.py
apps/core/src/opendevops_core/models/: __init__.py  agent.py  memory.py  users.py
apps/core/src/opendevops_core/providers/: __init__.py
apps/core/src/opendevops_core/providers/aws/: __init__.py  context.py  credentials.py  event_consumer.py  event_infra.py  permissions.py  poller.py
apps/core/src/opendevops_core/providers/aws/tools/: cloudtrail.py  cloudwatch.py  ec2.py  ecs.py  iam.py  lambda_.py  rds.py
apps/core/src/opendevops_core/providers/azure/: credentials.py
apps/core/src/opendevops_core/skills/azure-aks-debugging/: SKILL.md
apps/core/src/opendevops_core/skills/azure-app-service-errors/: SKILL.md
apps/core/src/opendevops_core/skills/azure-monitor-kql/: SKILL.md
apps/core/src/opendevops_core/skills/azure-vm-diagnostics/: SKILL.md
apps/core/src/opendevops_core/skills/ecs-deployment-failure/: SKILL.md
apps/core/src/opendevops_core/tools/: _cache.py  _cap.py  base.py  bash_tool.py  final_answer.py  history.py
demos/: README.md  e1_lambda_throttled.py  e2_lambda_crashing.py  h1_lambda_dynamodb_throttle.py  h2_iam_permission_regression.py  h3_lambda_vpc_no_egress.py  m1_bad_deploy.py  m2_timeout_misconfig.py
design-system/: README.md  SKILL.md  colors_and_type.css
docs/: auth.md  cli.md  conversation_summarization.md  databases.md  event_detection.md  iam_setup.md  llm_providers.md  mcp_server.md  monitoring.md  schema.md  skills.md  slack_and_polling.md  telegram.md  ui.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
migrations/: 001_initial.sql  002_soft_delete.sql  003_usage_events_metadata.sql  006_app_config.sql  007_alerts_dedup_key.sql  008_alerts_status.sql  (+2 more)
scripts/: setup_db.py  (+4 more)
(+226 files in other folders)
