[project]
name = "opendevops-agent"
version = "0.1.0"
description = "Open-source AWS DevOps Agent powered by OpenRouter LLMs"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "boto3>=1.34.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
devops-agent = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/tools", "src/cli", "src/integrations", "src/api"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.0.0",
    "moto[cloudwatch,logs,ec2,ecs,lambda,rds,iam,cloudtrail]>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
