[project]
name = "opendevops-agent"
version = "0.1.0"
description = "Open-source AWS DevOps Agent powered by OpenRouter LLMs"
requires-python = ">=3.11"
dependencies = [
    "deepagents",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "boto3>=1.34.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",
    "aiosqlite>=0.20.0",
    "cachetools>=5.3.0",
    "httpx>=0.27.0",
    "litellm>=1.83.0",
    "langchain-community>=0.4.1",
    "langchain-litellm>=0.6.4",
    "fastmcp>=3.2.4",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=5.0.0",
]

[project.scripts]
devops-agent = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/tools", "src/cli", "src/integrations", "src/api", "src/models"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "moto[cloudwatch,logs,ec2,ecs,lambda,rds,iam,cloudtrail]>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
