[project]
name = "opendevops-agent"
version = "0.1.0"
description = "Open-source AWS DevOps Agent powered by OpenRouter LLMs"
requires-python = ">=3.11"
dependencies = [
    "opendevops-core",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "fastmcp>=3.2.4",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=5.0.0",
]

[project.scripts]
devops-agent = "cli.main:app"
dev          = "cli.dev:dev_cmd"
migrate      = "cli.migrate:migrate_cmd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/cli", "src/config"]
dev-mode-dirs = ["src"]

[tool.uv]
package = true

[tool.uv.sources]
opendevops-core = { path = "../core", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "moto[cloudwatch,logs,ec2,ecs,lambda,rds,iam,cloudtrail]>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
