[project]
name = "opendevops-core"
version = "0.1.0"
description = "Shared agent core for OpenDevOps — DeepAgents loop, AWS tools, providers, and LLM wiring"
requires-python = ">=3.11"
dependencies = [
    "deepagents",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "boto3>=1.34.0",
    "azure-identity>=1.17.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",
    "aiosqlite>=0.20.0",
    "cachetools>=5.3.0",
    "httpx>=0.27.0",
    "litellm>=1.83.0",
    "langchain-community>=0.4.1",
    "langchain-litellm>=0.6.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opendevops_core"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
